--- a/siswa.html
+++ b/siswa.html
@@ -14,6 +14,10 @@
     <li>Ninda</li>
     <li>Dinda</li>
     <li>Satria</li>
+    <li>Pera</li>
+    <li>Gung Adi</li>
+    <li>Dwiki</li>
+    <li>Pande</li>
   </ul>
 </body>
 </html>
