Mengganti nama siswa dan menambahkan siswa baru

--- a/siswa.html
+++ b/siswa.html
@@ -7,10 +7,10 @@
   <title>Data Siswa</title>
 </head>
 <body>
-  <h1>Data siswa RPL 1</h1>
+  <h2>Data siswa RPL 1</h2>
   <ul>
     <li>Candra</li>
-    <li>Ardriyansah</li>
+    <li>Ryan</li>
     <li>Ninda</li>
     <li>Dinda</li>
     <li>Satria</li>
@@ -18,6 +18,7 @@
     <li>Gung Adi</li>
     <li>Dwiki</li>
     <li>Pande</li>
+    <li>Wahyu</li>
   </ul>
 </body>
 </html>
