mengubah file siswa.html

--- a/siswa.html
+++ b/siswa.html
@@ -7,7 +7,7 @@
   <title>Data Siswa</title>
 </head>
 <body>
-  <h1>Data siswa RPL 1</h1>
+  <h3>Data siswa RPL 1</h3>
   <ul>
     <li>Candra</li>
     <li>Ardriyansah</li>
@@ -17,7 +17,7 @@
     <li>Pera</li>
     <li>Gung Adi</li>
     <li>Dwiki</li>
-    <li>Pande</li>
   </ul>
+  <p>Wahyu yang buat</p>
 </body>
 </html>
